--- a/src/css/index.css
+++ b/src/css/index.css
@@ -238,5 +238,16 @@
        tracking-widest
        shadow-header3D
    }
-
+   .aside-box{
+       @apply
+       w-10/12
+       h-60
+       mx-auto
+       mt-5
+       mb-7
+       pt-1
+       bg-white
+       shadow-box
+       ;
+   }
 }
